Rebrand from AccelCQ to Acxelin Quantum LLC
- Update company name from AccelCQ/AccelCQ LLC/AccelCQ Inc to Acxelin Quantum LLC
- Update email domain from @accelcq.com to @acxelinquantum.com
- Rename logo file from accelcq-logo.png to acxelin-quantum-logo.png
- Update package name from accelcq-website to acxelin-quantum-website
- Update all page titles, meta descriptions, and content across all pages

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="AccelCQ Inc - Cutting-edge software services company specializing in confidential computing and quantum computing solutions." />
-    <title>AccelCQ Inc | Confidential & Quantum Computing Solutions</title>
+    <meta name="description" content="Acxelin Quantum LLC - Cutting-edge software services company specializing in confidential computing and quantum computing solutions." />
+    <title>Acxelin Quantum LLC | Confidential & Quantum Computing Solutions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
